[gd_scene load_steps=14 format=2]

[ext_resource path="res://Scripts/Ataque.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Attack/attack-1.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Attack/attack-2.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Attack/attack-3.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Attack/attack-4.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Attack/attack-5.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Attack/attack-6.png" type="Texture" id=7]
[ext_resource path="res://Sprites/Attack/attack-7.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Attack/attack-8.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Attack/attack-9.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Attack/attack-10.png" type="Texture" id=11]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ) ],
"loop": false,
"name": "Atacar",
"speed": 35.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 31, 65 )

[node name="Ataque" type="Area2D"]
script = ExtResource( 1 )

[node name="SpriteAtaque" type="AnimatedSprite" parent="."]
position = Vector2( -10, 0 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "Atacar"
frame = 4

[node name="ColisionAtaque" type="CollisionShape2D" parent="."]
position = Vector2( 9, 2 )
shape = SubResource( 2 )

[connection signal="body_entered" from="." to="." method="_on_Ataque_body_entered"]
[connection signal="animation_finished" from="SpriteAtaque" to="." method="_on_SpriteAtaque_animation_finished"]
